falta maquetar pantalla de carga

--- a/videojuego/index.html
+++ b/videojuego/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="caja_boton">
-            <a href="seleccionar.html"><img src="/assets/boton_jugar.png" alt="Botón"></a>
+            <a href="/assets/seleccionar.html"><img src="/assets/boton_jugar.png" alt="Botón"></a>
         </div>
         <div class="boton_ajustes">
             <img src="/assets/sprites/ajustes.png" alt="Ajustes">
