--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <div class="caja_boton">
-            <a href="/assets/seleccionar.html"><img src="/assets/boton_jugar.png" alt="Botón"></a>
+            <a href="/assets/html/seleccionar.html"><img src="/assets/botones/boton_jugar.png" alt="Jugar"></a>
         </div>
         <div class="boton_ajustes">
-            <img src="/assets/sprites/ajustes.png" alt="Ajustes">
+            <img src="/assets/botones/ajustes.png" alt="Ajustes">
         </div>
     </body>
 </html>
