--- a/assets/html/juego1.html
+++ b/assets/html/juego1.html
@@ -28,31 +28,7 @@
             loadSprite("cambiar", "/assets/botones/cambiarcubo.png")
             loadSprite("menu", "/assets/botones/menu.png")
             loadSprite("carga", "/assets/fondos/olas.jpg")
-
-            // Escena de carga
-            scene("loading", () => {
-                add([
-                    sprite("carga"),
-                    pos(width() / 2, height() / 2),
-                    origin("center"),
-                ]);
-
-                add([
-                    text("Cargando...", {
-                        size: 24,
-                        font: "Arial",
-                        color: rgb(255, 255, 255),
-                    }),
-                    pos(width() / 2, height() / 2 + 30),
-                    origin("center"),
-                ]);
-
-                wait(4, () => {
-                    // Cambiar a la escena principal del juego después de 4 segundos
-                    go("battle");
-                });
-            });
-
+            loadSprite("cuboplastico", "/assets/sprites/cuboenvases.png")
 
             const material = [
                 {
@@ -118,6 +94,10 @@
                 {
                     "sprite": "pescado",
                     "material": "organico"
+                },
+                {
+                    "sprite":"caja",
+                    "material": "carton"
                 }
             ]
 
@@ -140,6 +120,7 @@
                 "zapas",
                 "tele",
                 "pescado",
+                "caja",
             ]
 
             let vidas = 3;
@@ -148,17 +129,14 @@
                 loadSprite(obj, `/assets/sprites/${obj}.png`)
             }
 
-            loadBean()
-
             function mostrarVidas() {
-                
                 destroyAll("corazon");
-                const initialX = width() - 30 - (3 * 70); 
+                const initialX = width() - 60 - (3 * 32); 
+
                 for (let i = 0; i < vidas; i++) {
                     add([
-                        sprite("corazon"),
-                        pos(initialX + i * 70, 40),
-                        z("ui"),
+                        sprite("corazon"), 
+                        pos(initialX + i * 50, 40), 
                         "corazon"
                     ]);
                 }
@@ -191,10 +169,11 @@
                 mostrarVidas()
 
                 const player = add([
-                    sprite("bean"),
+                    sprite("cuboplastico"),
                     area(),
                     pos(width() / 2, height() - 64),
                     anchor("center"),
+                    scale(0.6),
                 ]);
 
                 onKeyDown("left", () => {
