--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <div class="caja_boton">
             <a href="/assets/html/seleccionar.html"><img src="/assets/botones/boton_jugar.png" alt="Jugar"></a>
         </div>
+        <div class="caja_reglas">
+            <a href="/assets/html/reglas_juego.html"><img src="/assets/botones/reglas.png" alt="Cómo se juega"></a>
+        </div>
         <div class="boton_ajustes">
             <img src="/assets/botones/ajustes.png" alt="Ajustes">
         </div>
