--- a/html/reglas_juego.html
+++ b/html/reglas_juego.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoBird</title>
-    <link rel="stylesheet" href="/assets/css/style3.css">
+    <link rel="stylesheet" href="/css/style3.css">
 </head>
 <body>
     <div class="container">
         <div class="plastico">
-            <img src="/assets/sprites/cuboenvases.png" alt="Envases">
+            <img src="/sprites/cuboenvases.png" alt="Envases">
             <h2 class="nombreCubo">Cubo Amarillo</h2>
             <p class="info">
                 Si elijes este cubo, tienes que intentar recoger el máximo de
@@ -20,7 +20,7 @@
             </p>
         </div>
         <div class="vidrio">
-            <img src="/assets/sprites/cubovidrio.png" alt="Vidrio">
+            <img src="/sprites/cubovidrio.png" alt="Vidrio">
             <h2 class="nombreCubo">Cubo Verde</h2>
             <p class="info">
                 Si elijes este cubo, tienes que intentar recoger el máximo de
@@ -31,7 +31,7 @@
             </p>
         </div>
         <div class="carton">
-            <img src="/assets/sprites/cubocarton.png" alt="Cartón">
+            <img src="/sprites/cubocarton.png" alt="Cartón">
             <h2 class="nombreCubo">Cubo Azul</h2>
             <p class="info">
                 Si elijes este cubo, tienes que intentar recoger el máximo de
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="boton_volver">
-        <a href="../../../index.html"><img src="../botones/volver.png" alt="Volver"></a>
+        <a href="/../index.html"><img src="/sprites/volver.png" alt="Volver"></a>
     </div>
     
 </body>
