--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <div class="caja_boton">
-            <a href="/html/seleccionar.html"><img src="/botones/boton_jugar.png" alt="Jugar"></a>
+            <a href="/html/seleccionar.html"><img src="/sprites/boton_jugar.png" alt="Jugar"></a>
         </div>
         <div class="caja_reglas">
-            <a href="/html/reglas_juego.html"><img src="/botones/reglas.png" alt="Cómo se juega"></a>
+            <a href="/html/reglas_juego.html"><img src="/sprites/reglas.png" alt="Cómo se juega"></a>
         </div>
         <div class="boton_ajustes">
-            <img src="/botones/ajustes.png" alt="Ajustes">
+            <img src="/sprites/ajustes.png" alt="Ajustes">
         </div>
     </body>
 </html>
