--- a/html/juego3.html
+++ b/html/juego3.html
@@ -12,13 +12,13 @@
         <script>
             kaboom();
 
-            loadSprite("background", "/fondos/fondo.jpg");
-            loadSprite("background2", "/fondos/fondo_gameover.jpg")
-            loadSprite("corazon", "/botones/corazon.png")
-            loadSprite("reiniciar", "/botones/reiniciar.png")
-            loadSprite("cambiar", "/botones/cambiarcubo.png")
-            loadSprite("menu", "/botones/menu.png")
-            loadSprite("carga", "/fondos/olas.jpg")
+            loadSprite("background", "/sprites/fondo.jpg");
+            loadSprite("background2", "/sprites/fondo_gameover.jpg")
+            loadSprite("corazon", "/sprites/corazon.png")
+            loadSprite("reiniciar", "/sprites/reiniciar.png")
+            loadSprite("cambiar", "/sprites/cambiarcubo.png")
+            loadSprite("menu", "/sprites/menu.png")
+            loadSprite("carga", "/sprites/olas.jpg")
             loadSprite("cubocarton", "/sprites/cubocarton.png")
             
             const material = [
