Arreglo de las rutas

--- a/html/reglas_juego.html
+++ b/html/reglas_juego.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="plastico">
-            <img src="/sprites/cuboenvases.png" alt="Envases">
+            <img src="ecobird/sprites/cuboenvases.png" alt="Envases">
             <h2 class="nombreCubo">Cubo Amarillo</h2>
             <p class="info">
                 Si elijes este cubo, tienes que intentar recoger el máximo de
@@ -20,7 +20,7 @@
             </p>
         </div>
         <div class="vidrio">
-            <img src="/sprites/cubovidrio.png" alt="Vidrio">
+            <img src="ecobird/sprites/cubovidrio.png" alt="Vidrio">
             <h2 class="nombreCubo">Cubo Verde</h2>
             <p class="info">
                 Si elijes este cubo, tienes que intentar recoger el máximo de
@@ -31,7 +31,7 @@
             </p>
         </div>
         <div class="carton">
-            <img src="/sprites/cubocarton.png" alt="Cartón">
+            <img src="ecobird/sprites/cubocarton.png" alt="Cartón">
             <h2 class="nombreCubo">Cubo Azul</h2>
             <p class="info">
                 Si elijes este cubo, tienes que intentar recoger el máximo de
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="boton_volver">
-        <a href="/../index.html"><img src="/sprites/volver.png" alt="Volver"></a>
+        <a href="../index.html"><img src="ecobird/sprites/volver.png" alt="Volver"></a>
     </div>
     
 </body>
