--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>EcoBird</title>
-        <link rel="stylesheet" href="/css/style1.css">
+        <link rel="stylesheet" href="css/style1.css">
     </head>
     <body>
         <div class="caja_boton">
-            <a href="html/seleccionar.html"><img src="/sprites/boton_jugar.png" alt="Jugar"></a>
+            <a href="html/seleccionar.html"><img src="sprites/boton_jugar.png" alt="Jugar"></a>
         </div>
         <div class="caja_reglas">
-            <a href="html/reglas_juego.html"><img src="/sprites/reglas.png" alt="Cómo se juega"></a>
+            <a href="html/reglas_juego.html"><img src="sprites/reglas.png" alt="Cómo se juega"></a>
         </div>
         <div class="boton_ajustes">
-            <img src="/sprites/ajustes.png" alt="Ajustes">
+            <img src="sprites/ajustes.png" alt="Ajustes">
         </div>
     </body>
 </html>
