--- a/html/juego3.html
+++ b/html/juego3.html
@@ -12,14 +12,14 @@
         <script>
             kaboom();
 
-            loadSprite("background", "/sprites/fondo.jpg");
-            loadSprite("background2", "/sprites/fondo_gameover.jpg")
-            loadSprite("corazon", "/sprites/corazon.png")
-            loadSprite("reiniciar", "/sprites/reiniciar.png")
-            loadSprite("cambiar", "/sprites/cambiarcubo.png")
-            loadSprite("menu", "/sprites/menu.png")
-            loadSprite("carga", "/sprites/olas.jpg")
-            loadSprite("cubocarton", "/sprites/cubocarton.png")
+            loadSprite("background", "sprites/fondo.jpg");
+            loadSprite("background2", "sprites/fondo_gameover.jpg")
+            loadSprite("corazon", "sprites/corazon.png")
+            loadSprite("reiniciar", "sprites/reiniciar.png")
+            loadSprite("cambiar", "sprites/cambiarcubo.png")
+            loadSprite("menu", "sprites/menu.png")
+            loadSprite("carga", "sprites/olas.jpg")
+            loadSprite("cubocarton", "sprites/cubocarton.png")
             
             const material = [
                 {
@@ -117,7 +117,7 @@
             let vidas = 3;
 
             for (const obj of objs) {
-                loadSprite(obj, `/sprites/${obj}.png`)
+                loadSprite(obj, `sprites/${obj}.png`)
             }
 
             function mostrarVidas() {
