Arreglo de las rutas x3

--- a/html/seleccionar.html
+++ b/html/seleccionar.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoBird</title>
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="../css/style2.css">
 </head>
 <body>
     <div class="caja">
         <div class="cubos">
             <div class="caja_cubos">
-                <a href="juego1.html"><img src="sprites/cuboenvases.png" alt="Cubo de envases" class="img_cubos"></a>
+                <a href="juego1.html"><img src="../sprites/cuboenvases.png" alt="Cubo de envases" class="img_cubos"></a>
                 <img src="sprites/textoenvases.png" alt="envases" class="nombres_cubos">
             </div>
             <div class="caja_cubos">   
-                <a href="juego2.html"><img src="sprites/cubovidrio.png" alt="Cubo de vidrio" class="img_cubos"></a>
+                <a href="juego2.html"><img src="../sprites/cubovidrio.png" alt="Cubo de vidrio" class="img_cubos"></a>
                 <img src="sprites/textovidrio.png" alt="vidrio" class="nombres_cubos">
             </div>
             <div class="caja_cubos">
-                <a href="juego3.html"><img src="sprites/cubocarton.png" alt="Cubo de cartón" class="img_cubos"></a>
+                <a href="juego3.html"><img src="../sprites/cubocarton.png" alt="Cubo de cartón" class="img_cubos"></a>
                 <img src="sprites/textocarton.png" alt="carton" class="nombres_cubos">
             </div>
         </div>
