Le he añadido ../

--- a/html/seleccionar.html
+++ b/html/seleccionar.html
@@ -11,15 +11,15 @@
         <div class="cubos">
             <div class="caja_cubos">
                 <a href="juego1.html"><img src="../sprites/cuboenvases.png" alt="Cubo de envases" class="img_cubos"></a>
-                <img src="sprites/textoenvases.png" alt="envases" class="nombres_cubos">
+                <img src="../sprites/textoenvases.png" alt="envases" class="nombres_cubos">
             </div>
             <div class="caja_cubos">   
                 <a href="juego2.html"><img src="../sprites/cubovidrio.png" alt="Cubo de vidrio" class="img_cubos"></a>
-                <img src="sprites/textovidrio.png" alt="vidrio" class="nombres_cubos">
+                <img src="../sprites/textovidrio.png" alt="vidrio" class="nombres_cubos">
             </div>
             <div class="caja_cubos">
                 <a href="juego3.html"><img src="../sprites/cubocarton.png" alt="Cubo de cartón" class="img_cubos"></a>
-                <img src="sprites/textocarton.png" alt="carton" class="nombres_cubos">
+                <img src="../sprites/textocarton.png" alt="carton" class="nombres_cubos">
             </div>
         </div>
     </div> 
