--- a/html/juego2.html
+++ b/html/juego2.html
@@ -12,14 +12,14 @@
         <script>
             kaboom();
 
-            loadSprite("background", "sprites/fondo.jpg");
-            loadSprite("background2", "sprites/fondo_gameover.jpg")
-            loadSprite("corazon", "sprites/corazon.png")
-            loadSprite("reiniciar", "sprites/reiniciar.png")
-            loadSprite("cambiar", "sprites/cambiarcubo.png")
-            loadSprite("menu", "sprites/menu.png")
-            loadSprite("carga", "sprites/olas.jpg")
-            loadSprite("cubovidrio", "sprites/cubovidrio.png")
+            loadSprite("background", "../sprites/fondo.jpg");
+            loadSprite("background2", "../sprites/fondo_gameover.jpg")
+            loadSprite("corazon", "../sprites/corazon.png")
+            loadSprite("reiniciar", "../sprites/reiniciar.png")
+            loadSprite("cambiar", "../sprites/cambiarcubo.png")
+            loadSprite("menu", "../sprites/menu.png")
+            loadSprite("carga", "../sprites/olas.jpg")
+            loadSprite("cubovidrio", "../sprites/cubovidrio.png")
 
 
             const material = [
@@ -118,7 +118,7 @@
             let vidas = 3;
 
             for (const obj of objs) {
-                loadSprite(obj, `sprites/${obj}.png`)
+                loadSprite(obj, `../sprites/${obj}.png`)
             }
 
             function mostrarVidas() {
@@ -309,7 +309,7 @@ Tu puntuación es de ${puntos} puntos`, {
                 ])
 
                 onClick("botonMenu", () => {
-                    window.location.href = "index.html";
+                    window.location.href = "../index.html";
                 });
 
             });
