Finalmente está arreglado el problema UvU

--- a/html/reglas_juego.html
+++ b/html/reglas_juego.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="plastico">
-            <img src="s../prites/cuboenvases.png" alt="Envases">
+            <img src="../sprites/cuboenvases.png" alt="Envases">
             <h2 class="nombreCubo">Cubo Amarillo</h2>
             <p class="info">
                 Si elijes este cubo, tienes que intentar recoger el máximo de
